# imggetpixels

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
docs/json/: imggetpixels-linux_x64_sha256.json  imggetpixels-windows_x64_sha256.json
docs/md/: pre-release.md  release.md
docs/md/reference/: changelog.md
docs/media/icons/: imggetpixels.psd
src/: main.cpp
src/include/: ArgumentParser.cpp  ArgumentParser.h  pch.h  resource.rc.in  stb_image_write.h
